<resources>
    <string name="app_name">Personal Budget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="personal_budget">Personal Budget</string>
    <string name="menu_current_expenses">Current Expenses</string>
    <string name="menu_earnings_and_expenses_plans">Earnings And Expenses Plans</string>
    <string name="menu_expenses_summary">Expenses Summary</string>
    <string name="menu_budget_additional_options">Additional Budget Options</string>
    <string name="menu_financial_calculator">Financial Calculator</string>
    <string name="menu_budget_hints">Budget Hints</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="home_welcome_text">Hello! Please choose option from top left menu :)</string>
    <string name="irregular_expense_category">irregular expense category</string>
    <string name="sample_date">06-07-2019</string>
    <string name="irregular_expenses">Irregular expenses</string>
    <string name="add">Add</string>
    <string name="regular_expenses">Regular expenses</string>
    <string name="money_remaining">Money remaining:</string>
    <string name="earning_category">earning category</string>
    <string name="new_category">new category</string>
    <string name="hint">hint</string>
    <string name="default_zero">0</string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>November</item>
        <item>October</item>
        <item>December</item>
    </string-array>
</resources>
