<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/baseline_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/current_expenses"
            android:icon="@drawable/baseline_account_balance_wallet_black_24dp"
            android:title="@string/menu_current_expenses" />
        <item
            android:id="@+id/earnings_and_expenses_plans"
            android:icon="@drawable/baseline_list_black_24dp"
            android:title="@string/menu_earnings_and_expenses_plans" />
        <item
            android:id="@+id/expenses_summary"
            android:icon="@drawable/baseline_poll_black_24dp"
            android:title="@string/menu_expenses_summary" />
        <item
            android:id="@+id/financial_calculator"
            android:icon="@drawable/baseline_attach_money_black_24dp"
            android:title="@string/menu_financial_calculator" />
        <item
            android:id="@+id/budget_hints"
            android:icon="@drawable/baseline_school_black_24dp"
            android:title="@string/menu_budget_hints" />
    </group>

</menu>