<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="earning"
            type="com.example.mybudgetv2.models.Earning" />
    </data>

    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.EarningsAndExpensesPlansFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/monthPickingEarningsAndExpensesSpinner"
                android:layout_width="174dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/lastMonthEarningsEditText"
                android:layout_width="175dp"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:text="@{earning.earning}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/monthPickingEarningsAndExpensesSpinner"
                app:layout_constraintTop_toTopOf="parent">

            </EditText>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/regularExpensesPlansList"
                android:layout_width="412dp"
                android:layout_height="106dp"
                android:layout_marginTop="80dp"
                android:clipToPadding="false"
                android:padding="5dip"
                android:scrollbars="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="4"
                tools:listitem="@layout/item_expense_plan" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B59781"
                android:text="@string/irregular_expenses"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/irregularExpensesPlansList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regularExpensesPlansList"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/irregularExpensesPlansList"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginTop="48dp"
                android:clipToPadding="false"
                android:padding="5dip"
                android:scrollbars="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regularExpensesPlansList"
                tools:itemCount="2"
                tools:listitem="@layout/item_irregular_expense_plan" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="62dp"
                android:layout_marginLeft="62dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="62dp"
                android:layout_marginRight="62dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/addNewIrregularExpenseToPlanButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/add"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.994"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/irregularExpensesPlansList" />

                    <EditText
                        android:id="@+id/addNewIrregularExpenseToPlanEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="New Irregular expense Name"
                        android:textSize="15dp"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintVertical_bias="0.0">

                    <Button
                        android:id="@+id/addNewRegularExpenseToPlanButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/addNewIrregularExpenseToPlanButton"
                        app:layout_constraintVertical_bias="0.03" />

                    <EditText
                        android:id="@+id/addNewRegularExpenseToPlanEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="New Regular Expense Name"
                        android:textSize="15dp" />
                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:layout_marginBottom="1dp"
                android:background="#B59781"
                android:text="@string/regular_expenses"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/regularExpensesPlansList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#7FB3BA"
                android:orientation="horizontal"
                android:padding="20dip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/irregularExpensesPlansList">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/money_remaining"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/moneyRemainingValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:autofillHints="Here is money remaining"
                    android:background="#7FB3BA"
                    android:text="test"
                    android:textColor="#356369"
                    android:textSize="24dp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>